--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -42,6 +42,14 @@ content %}
       placeholder="Confirm password"
     />
   </div>
+    <div class="form-group">
+        <label for="role">Role</label>
+        <select class="form-control" id="role" name="role">
+            <option value="administratorius">Administratorius</option>
+            <option value="vadybininkas">Vadybininkas</option>
+            <option value="darbuotojas">Darbuotojas</option>
+        </select>
+    </div>
   <br />
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
