--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,6 +9,9 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+
+
+
     <link rel="stylesheet" href="../static/index.css" />
     <link
       rel="stylesheet"
@@ -81,6 +84,7 @@
     ></script>
 
 {% block javascript %}
+   <script src="../static/multiselect-dropdown.js" ></script>
     <script src="../static/index.js"></script>
 {% endblock %}
   </body>
