--- a/website/templates/ikainis.html
+++ b/website/templates/ikainis.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block title %}Ikainis{% endblock %} {% block content %}
-    <h1 align="center">Ikainis</h1>
+    <h1 align="center">Įkainis</h1>
     <form method="POST">
         <label for="data">Galioja nuo</label>
         <input type="date" name="data" id="data" class="form-control"></input>
@@ -7,7 +7,7 @@
         <label for="darbo_valandos">Valandinis</label>
         <input type="number" name="valandinis" step="0.01" class="form-control" value="0"></input>
         <br />
-        <label for="deziu_kiekis">Deziu kiekis</label>
+        <label for="deziu_kiekis">Dėžių kiekis</label>
         <input type="number" name="deziu_kiekis" id="deziu_kiekis" class="form-control" value=0></input>
         <br />
         <label for="pasirinkti_darbuotojus">Pasirinkti darbuotojus</label>
@@ -20,7 +20,7 @@
         <br />
         <br />
         <div align="center">
-            <button type="submit" class="btn btn-primary">Pateikti Ikaini</button>
+            <button type="submit" class="btn btn-primary">Pateikti Įaini</button>
         </div>
     </form>
 {% endblock %}
