--- a/website/templates/pdf_ataskaita.html
+++ b/website/templates/pdf_ataskaita.html
@@ -7,7 +7,7 @@
         <label for="darbo_valandos">Darbo val.</label>
         <input type="number" name="darbo_valandos" id="darbo_valandos" class="form-control" value="{{ ataskaita.atidirbtos_valandos }}"></input>
         <br />
-        <label for="deziu_kiekis">Deziu kiekis</label>
+        <label for="deziu_kiekis">Dėžių kiekis</label>
         <input type="number" name="deziu_kiekis" id="deziu_kiekis" class="form-control" value="{{ ataskaita.perkeltos_dezes }}"></input>
         <br />
     </form>
