sutvarkytas user-darbuotojas paveldėjimas ir įkainiai

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -187,7 +187,7 @@
                     <td>{{ ikainis.id }}</td>
                     <td>{{ ikainis.data }}</td>
                     <td>{{ ikainis.valandinis }}</td>
-                    <td>{{ ikainis.deziu_kiekis }}</td>
+                    <td>{{ ikainis.atlygis_uz_deze }}</td>
                     <td>{% for darbuotojas in ikainis.darbuotojai %}
                             {{ darbuotojas.id }}
                         {% endfor %}
