--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -45,7 +45,7 @@ content %}
     <div class="form-group">
         <label for="role">Role</label>
         <select class="form-control" id="role" name="role">
-            <option value="administratorius">Administratorius</option>
+            <!-- <option value="administratorius">Administratorius</option> -->
             <option value="vadybininkas">Vadybininkas</option>
             <option value="darbuotojas">Darbuotojas</option>
         </select>
